# teaching_social_navigation

Navi_functions/classifier_hsr/: CMakeLists.txt  package.xml
Navi_functions/classifier_hsr/include/: StringTokenizer.h  manager.h
Navi_functions/classifier_hsr/msg/: CBA_NavInfo.msg
Navi_functions/classifier_hsr/scripts/: backup_mk_grasp.py
Navi_functions/classifier_hsr/src/: Dataset.csv  DatasetState.csv  classifier.cpp  classifier_test.cpp  gui_test2.py
Navi_functions/grid_hsr/: CMakeLists.txt  package.xml
Navi_functions/grid_hsr/grid_maps/: ETC_Hallway_occupancy12-09-2016.bag
Navi_functions/grid_hsr/include/: feature_grid.h  grid.h
Navi_functions/grid_hsr/src/: feature_grid.cpp  grid_node.cpp  odom_grid_node.cpp
Navi_functions/navi_mdp/: CMakeLists.txt
Navi_functions/navi_mdp/include/: MDPmanager.h  types.h
Navi_functions/navi_mdp/launch/: MDP.launch  hsr_rviz.rviz
Navi_functions/navi_mdp/msg/: Mdpmsg.msg
Navi_functions/navi_mdp/src/: srBSpline.cpp
grid_map/grid_map_demos/: CMakeLists.txt  package.xml
grid_map/grid_map_demos/config/: navigation_map.yaml  navigation_map.yaml~
grid_map/grid_map_demos/config/trikey/: trikey_init.yaml  trikey_init.yaml~  trikey_linked_to_world (backup).urdf  trikey_linked_to_world11.urdf  trikey_linked_to_world_orig.urdf  trikey_view_world.rviz
grid_map/grid_map_demos/launch/: navigation_map.launch
grid_map/grid_map_demos/rviz/: grid_map_navigation.rviz
grid_map/grid_map_demos/src/: move_demo_node.cpp  navigation_map.cpp  simple_demo_node.cpp
grid_map/grid_map_visualization/src/visualizations/: OccupancyGridVisualization.cpp
lama/: README.md
lama/interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
lama/interfaces/launch/: init_lama.launch
lama/interfaces/scripts/: descriptor_extractor  map_node
lama/interfaces/src/lama_interfaces/: abstract_db_interface.py  cleartext_interface_factory.py  core_interface.py  graph_builder.py  interface_factory.py  local_map_agent.py  map_agent.py
lama/interfaces/srv/: ActOnMap.srv  AddInterface.srv
lama/interfaces/test/: test_core.py  test_core.test  test_interfaces_base.py  test_interfaces_cleartext.py  test_interfaces_cleartext.test  test_interfaces_roscpp.test  test_interfaces_serialized.py  test_interfaces_serialized.test  utest.cpp
lama/lama_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
lama_utilities/lama_common/src/: place_profile_utils.cpp  polygon_utils.cpp
lama_utilities/local_map/include/local_map/: map_builder.h
lama_utilities/local_map/src/: local_map_node.cpp  map_builder.cpp
navi_functions/cba_msgs/: CMakeLists.txt  package.xml
navi_functions/cba_msgs/msg/: CBA_NavInfo.msg
navi_functions/classifier_hsr/: CMakeLists.txt  launch_all.sh  package.xml
navi_functions/classifier_hsr/include/: classifier.h  manager.h
navi_functions/classifier_hsr/launch/: gui_test.launch  sim_test.launch
navi_functions/classifier_hsr/scripts/: action_gui_move.py  backup.py  base_move_mk.py  gui_base_move.py  gui_move.py  gui_test.py  gui_test2.py  human_marker.py  human_marker_sim.py  human_tracking_cmd.py  omni_actionlib.py  omni_message.py  omni_message_velocity.py  omni_velocity_gui.py  sim_base_move.py
navi_functions/classifier_hsr/src/: MD.csv  StringTokenizer.cpp  classifier.cpp  classifier_test.cpp  manager.cpp
navi_functions/grid_hsr/: CMakeLists.txt  grid_new4_map.bag  hcrl_grid.bag  package.xml
navi_functions/grid_hsr/include/: feature_grid.h  grid.h  grid.h~
navi_functions/grid_hsr/launch/: grid_visualize.rviz  visualize_grid.launch
navi_functions/grid_hsr/src/: feature_grid.cpp  grid_node.cpp  human_boxes.cpp  proj_map_reader.cpp  proj_map_saver.cpp
navi_functions/human_filter/: CMakeLists.txt  package.xml
navi_functions/human_filter/include/people_tracking_filter/: edge_leg_filter_node.h  people_tracking_node.h
navi_functions/human_filter/launch/: filter.launch
navi_functions/human_filter/src/: edge_leg_filter_node.cpp  people_tracking_node.cpp
navi_functions/human_tracking/: CMakeLists.txt  package.xml
navi_functions/human_tracking/include/: human_scan.h  humantracking.h
navi_functions/human_tracking/launch/: MDP.launch  human_tracking.launch  scanning_human.launch
navi_functions/human_tracking/src/: human_scan.cpp  humantracking.cpp  scanning_test.cpp  tracking_test.cpp
navi_functions/human_tracking/srv/: peoplefinder.srv
navi_functions/navi_mdp/: CMakeLists.txt  package.xml
navi_functions/navi_mdp/config/: corridor.world  navigation_map.yaml  static2.world  static3.world  walls.world  walls2.world
navi_functions/navi_mdp/include/: MDPmanager.h  srBSpline.h
navi_functions/navi_mdp/launch/: hsr_rviz.rviz  mdp_test.launch
navi_functions/navi_mdp/src/: MDPmanager.cpp  backup.cpp  base_actionlib.cpp  base_conti_actionlib.cpp  dynamic_planner.cpp  global_planner.cpp
navi_functions/villa_navi_service/: CMakeLists.txt  package.xml
navi_functions/villa_navi_service/include/: navi_service_node.h
navi_functions/villa_navi_service/src/: navi_service_node.cpp  service_test.cpp
navi_functions/villa_navi_service/srv/: GoTargetPos_rel.srv
